--- a/package.json
+++ b/package.json
@@ -12,6 +12,14 @@
   "licence": "MIT",
   "private": true,
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-react": "^7.23.3",
     "jest": "^29.7.0"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.23.9",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
